# heat-cli

./: .gitignore  AAVE_IMPLEMENTATION_BRIEF.md  CHANGELOG.md  CHECKLIST.md  Cargo.toml  LICENSE  LIFI_IMPLEMENTATION_BRIEF.md  README.md  ROADMAP.md  SUBSTRATE_PARALLEL_IMPLEMENTATION.md  install.sh
.github/workflows/: ci.yml  docs.yml  release.yml
crates/heat-aave/: Cargo.toml
crates/heat-aave/src/: addresses.rs  cmd.rs  contracts.rs  dto.rs  lib.rs  read.rs  resolver.rs  tests.rs  write.rs
crates/heat-cli/: Cargo.toml
crates/heat-cli/src/: cmd_accounts.rs  cmd_wallet.rs  main.rs
crates/heat-core/: Cargo.toml
crates/heat-core/src/: accounts.rs  branding.rs  config.rs  ctx.rs  error.rs  fs.rs  keystore.rs  lib.rs  output.rs  safety.rs  validate.rs
crates/heat-evm/: Cargo.toml
crates/heat-evm/src/: amount.rs  balance.rs  chains.rs  erc20.rs  lib.rs  parse.rs  rpc.rs  signer.rs
crates/heat-hl/: Cargo.toml
crates/heat-hl/src/: asset.rs  cmd.rs  exchange.rs  lib.rs  signer.rs
crates/heat-hl/src/cmd/: balance.rs  cancel.rs  leverage.rs  markets.rs  order.rs  orders.rs  positions.rs  price.rs  send.rs  stream.rs
crates/heat-lifi/: Cargo.toml
crates/heat-lifi/src/: client.rs  cmd.rs  dto.rs  exec.rs  http_tests.rs  lib.rs  map.rs  tests.rs
crates/heat-llama/: Cargo.toml
crates/heat-llama/src/: client.rs  cmd.rs  config.rs  dto.rs  lib.rs  map.rs
crates/heat-pm/: Cargo.toml
crates/heat-pm/src/: auth.rs  cmd.rs  lib.rs  tests.rs
crates/heat-pm/src/cmd/: approve.rs  bridge.rs  clob.rs  ctf.rs  data.rs  gamma.rs  stream.rs
crates/heat-solana/: Cargo.toml
crates/heat-solana/src/: amount.rs  cluster.rs  lib.rs  parse.rs  rpc.rs  signer.rs  spl.rs  tx.rs
scripts/: check-upstream.sh
scripts/release/: build.sh  check.sh  install.sh  package.sh
site/: package-lock.json  package.json  styles.css  tsconfig.json  vocs.config.ts
site/pages/: index.mdx
site/pages/core/: accounts.mdx  output.mdx  safety.mdx
site/pages/introduction/: getting-started.mdx  installation.mdx
site/pages/protocols/: aave.mdx  defillama.mdx  hyperliquid-onboarding.mdx  hyperliquid.mdx  lifi.mdx  polymarket-onboarding.mdx  polymarket.mdx
site/pages/reference/: limitations.mdx  v0-1-0.mdx  v0-2-0.mdx  v0-4-0.mdx
site/sidebar/: sidebar.ts
