[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.3"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
heat-core = { path = "crates/heat-core" }
heat-evm = { path = "crates/heat-evm" }
heat-lifi = { path = "crates/heat-lifi" }
heat-aave = { path = "crates/heat-aave" }
heat-llama = { path = "crates/heat-llama" }
heat-solana = { path = "crates/heat-solana" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[profile.release]
lto = "thin"
strip = true
panic = "abort"
