[package]
name = "heat"
version.workspace = true
edition.workspace = true

[[bin]]
name = "heat"
path = "src/main.rs"

[dependencies]
heat-aave = { workspace = true }
heat-core = { workspace = true }
heat-hl = { path = "../heat-hl" }
heat-lifi = { workspace = true }
heat-pm = { path = "../heat-pm" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hex = "0.4"
ed25519-dalek = "2"
bs58 = "0.5"
