[package]
name = "heat-lifi"
version.workspace = true
edition.workspace = true

[dependencies]
heat-core = { workspace = true }
heat-evm = { path = "../heat-evm" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# HTTP client for LI.FI REST API
reqwest = { version = "0.12", features = ["json"] }

# EVM transaction types
alloy = { version = "1.5", features = [
    "providers", "rpc-types", "transports", "transport-http",
] }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
serde_json = { workspace = true }
