[package]
name = "heat-llama"
version.workspace = true
edition.workspace = true

[dependencies]
heat-core = { workspace = true }
clap = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
