[package]
name = "heat-pm"
version.workspace = true
edition.workspace = true

[dependencies]
heat-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# Polymarket SDK
polymarket-client-sdk = { version = "0.4", features = ["gamma", "data", "bridge", "clob", "ctf"] }

# EVM signing + on-chain calls
alloy = { version = "1.6", features = ["signer-local", "provider-http", "contract"] }

# Precision
rust_decimal = "1.39"

# Date handling (rewards)
chrono = { version = "0.4", default-features = false, features = ["std"] }

# Hex encoding for key bytes
hex = "0.4"
